--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 
 		<div class = "container">
-			<div class = "inner text-center">
+			<div class = "inner text-center display:flex;justify-content:center;align-items:center">
 				<p class= "lead">
 					<h1>Arturo Esquivel</h1>
 					<p>"arturo.com" was already taken.</p>
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 
-		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src =  "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src = "js/bootstrap.js"></script>
 
 	</body>
