--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
 		<link href = "css/bootstrap.min.css" rel = "stylesheet">
 		<link href = "css/styles.css" rel = "stylesheet">
 
-		<title>Arturo</title>
 
 	</head>
 	<body>
-
 		<div class = "container">
 			<div class = "inner text-center display:flex;justify-content:center;align-items:center">
 				<p class= "lead">
 					<h1>Arturo Esquivel</h1>
 					<p>"arturo.com" was already taken.</p>
-					<a class = "btn-warning btn-lg btn">About Me</a>
+			<!--	<a class = "btn-warning btn-lg btn">About Me</a>
 					<a class = "btn-warning btn-lg btn">Experience</a>
-					<a class = "btn-warning btn-lg btn">Resume</a>
+					<a class = "btn-warning btn-lg btn">Resume</a> 			-->
+					<a href="https://www.linkedin.com/in/arturoesquivel"><i class="fa btnn fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+					<a href="https://github.com/r2roesk"><i class="fa btnn fa-github-square fa-2x" aria-hidden="true"></i></a>
+					<a href="https://twitter.com/ArturoUrBoat"><i class="fa btnn fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+					<a href="mailto:arturoesquivel13@gmail.com"><i class="fa btnn fa-envelope-o fa-2x" aria-hidden="true"></i></a>
 				</p>
 			</div>
 		</div>
 
 		<script src =  "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src = "js/bootstrap.js"></script>
+		<script src="https://use.fontawesome.com/8068b9aa4d.js"></script>
 
 	</body>
 </html>
